src/test/ui/const-deref-ptr.stderr
error[E0396]: raw pointers cannot be dereferenced in statics
  --> $DIR/const-deref-ptr.rs:14:29
   |
LL |     static C: u64 = unsafe {*(0xdeadbeef as *const u64)}; //~ ERROR E0396
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ dereference of raw pointer in constant

error: aborting due to previous error

For more information about this error, try `rustc --explain E0396`.
